// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCAssessment adapter can be constructed WITH attributes 1`] = `
Object {
  "modelState": Object {
    "correctFeedbacks": Array [
      "Correct!",
      "Great job!",
    ],
    "incorrectfeedbacks": null,
    "responseType": "pick-one",
  },
}
`;

exports[`MCAssessment adapter can be constructed WITHOUT attributes 1`] = `
Object {
  "modelState": Object {
    "correctFeedbacks": null,
    "incorrectFeedbacks": null,
    "responseType": "",
  },
}
`;

exports[`MCAssessment adapter can convert to JSON 1`] = `
Object {
  "content": Object {
    "correctFeedbacks": null,
    "incorrectFeedbacks": null,
    "responseType": "pick-one",
  },
}
`;
